--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.0.0",
+    "react-coverflow": "^0.2.20",
+    "react-icons": "^3.11.0",
+    "react-multi-carousel": "^2.5.5",
+    "react-responsive-modal": "^6.0.1",
+    "react-router-dom": "^5.2.0",
+    "reactstrap": "^8.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
