--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://srush-ray.github.io/Covid/",
+  "homepage": "https://srush-ray.github.io/Covid",
   "name": "covid",
   "version": "0.1.0",
   "private": true,
